# asus-dial-driver

./: .gitignore  CMakeLists.txt  LICENSE  README.md  install-autostart.sh  launch-asus-dial.sh  launch-openwheel.sh  setup-permissions.sh
asus-dial-daemon/: CMakeLists.txt  helpers.h  hidreader.c
asus-dial-daemon/tests/: test_find_hidraw_device.c
asus-dial-gadget/: CMakeLists.txt
asus-dial-gadget/qml/: CenterLogo.qml  CompactDial.qml  DialIcon.qml  DialOverlay.qml  Hud.qml  RadialMenu.qml  RingWedge.qml
asus-dial-gadget/src/: AsyncRotateDispatcher.cpp  AsyncRotateDispatcher.h  Backlight.h  BacklightReader.cpp  BacklightReader.h  DBusCaller.h  DBusListener.cpp  DialController.cpp  DialController.h  DialFunction.h  FunctionRegistry.cpp  FunctionRegistry.h  FunctionWorker.cpp  FunctionWorker.h  LogindSession.cpp  ProcessRunner.cpp  ProcessRunner.h  QtDBusCaller.h  SyncRotateDispatcher.cpp  TrayController.h  TrayIcon.cpp  main.cpp
asus-dial-gadget/src/functions/: BrightnessFunction.cpp  BrightnessFunction.h  MediaFunction.cpp  MediaFunction.h  ScrollBackendFactory.cpp  ScrollFunction.cpp  ScrollFunction.h  UinputScrollBackend.cpp  VolumeFunction.cpp  X11ScrollBackend.cpp  X11ScrollBackend.h
asus-dial-gadget/tests/: CMakeLists.txt  FakeDBusCaller.h  FakeDialFunction.h  test_asyncrotatedispatcher.cpp  test_brightnessfunction.cpp  test_dbuslistener.cpp  test_dialcontroller.cpp  test_logindsession.cpp  test_mediafunction.cpp  test_scrollfunction.cpp  test_volumefunction.cpp
docs/superpowers/plans/: 2026-07-01-openwheel-gadget-v1.md  2026-07-02-v2-icons.md  2026-07-04-v3-asus.md
docs/superpowers/specs/: 2026-07-01-openwheel-gadget-v1-design.md  2026-07-02-v2-icons-design.md  2026-07-04-v3-asus-ui-design.md
openwheel-daemon/: CMakeLists.txt  asus_wheel  helpers.c  hidreader.c  openwheel.h
openwheel-gadget/: CMakeLists.txt  openwheel-gadget.desktop
openwheel-gadget/qml/: CenterLogo.qml  CompactDial.qml  DialIcon.qml  DialOverlay.qml  Hud.qml  RadialMenu.qml  RingWedge.qml
openwheel-gadget/src/: Backlight.cpp  DBusListener.cpp  DBusListener.h  DialController.cpp  DialController.h  DialFunction.h  FunctionWorker.cpp  FunctionWorker.h  LogindSession.h  QtDBusCaller.cpp  RotateDispatcher.h  SyncRotateDispatcher.cpp  SyncRotateDispatcher.h  TrayController.cpp  TrayIcon.h  main.cpp
openwheel-gadget/src/functions/: BrightnessFunction.cpp  BrightnessFunction.h  MediaFunction.cpp  ScrollBackend.h  ScrollBackendFactory.h  UinputScrollBackend.cpp  UinputScrollBackend.h  VolumeFunction.h
openwheel-gadget/tests/: CMakeLists.txt  FakeDialFunction.h  test_asyncrotatedispatcher.cpp  test_brightnessfunction.cpp  test_dbuslistener.cpp  test_dialcontroller.cpp  test_functionregistry.cpp  test_rotatedispatcher.cpp  test_traycontroller.cpp  test_volumefunction.cpp
udev/: 99-asus-dial-hidraw.rules
